// EMPRESA PETROLERA - Modelo de Datos
// Dominio: Oil & Gas | Upstream + Downstream + Comercial
// Pega esto en: https://dbdiagram.io/d
// ==========================================

Table dim_pais {
  pais_id     int       [pk, increment]
  codigo_iso  char(3)   [unique, not null, note: 'MEX, USA, SAU, VEN']
  nombre      varchar(80) [not null]
  region      varchar(50) [not null, note: 'America / Medio Oriente / Africa / Europa']
}

Table dim_cuenca {
  cuenca_id     int           [pk, increment]
  pais_id       int           [not null, ref: > dim_pais.pais_id]
  nombre_cuenca varchar(100)  [not null]
  tipo_cuenca   varchar(30)   [not null, note: 'Offshore / Onshore / Deepwater']
  area_km2      decimal(12,2)
}

Table dim_campo {
  campo_id             int           [pk, increment]
  cuenca_id            int           [not null, ref: > dim_cuenca.cuenca_id]
  codigo_campo         varchar(20)   [unique, not null]
  nombre_campo         varchar(100)  [not null]
  fecha_descubrimiento date
  fecha_inicio_prod    date
  estado               varchar(20)   [not null, note: 'Exploracion / Desarrollo / Produccion / Abandono']
  tipo_yacimiento      varchar(20)   [not null, note: 'Convencional / Shale / TarSands / Deepwater']
  profundidad_m        int
  reservas_mmbbl       decimal(15,3) [note: 'Millones de barriles totales']
}

Table dim_pozo {
  pozo_id             int          [pk, increment]
  campo_id            int          [not null, ref: > dim_campo.campo_id]
  codigo_pozo         varchar(30)  [unique, not null]
  nombre_pozo         varchar(100) [not null]
  tipo_pozo           varchar(20)  [not null, note: 'Productor / Inyector / Exploratorio / Desviado']
  fecha_perforacion   date
  profundidad_total_m int
  latitud             decimal(10,7)
  longitud            decimal(10,7)
  estado_pozo         varchar(20)  [not null, note: 'Activo / Cerrado / Abandonado / Suspendido']
}

Table dim_instalacion {
  instalacion_id    int          [pk, increment]
  campo_id          int          [not null, ref: > dim_campo.campo_id]
  nombre            varchar(100) [not null]
  tipo              varchar(30)  [not null, note: 'Plataforma / FPSO / Refineria / Terminal / Planta_Gas']
  capacidad_bpd     int          [note: 'Barriles por dia']
  fecha_comisionado date
}

Table dim_producto {
  producto_id  int          [pk, increment]
  codigo       varchar(20)  [unique, not null]
  nombre       varchar(80)  [not null]
  categoria    varchar(30)  [not null, note: 'CrudoPesado / CrudoLiviano / Gas / GLP / Gasolina / Diesel / Jet']
  api_gravity  decimal(5,2) [note: 'Grados API']
  azufre_pct   decimal(5,3) [note: '% contenido de azufre']
}

Table dim_cliente {
  cliente_id   int          [pk, increment]
  pais_id      int          [not null, ref: > dim_pais.pais_id]
  razon_social varchar(150) [not null]
  tipo_cliente varchar(30)  [not null, note: 'Refineria / Trader / Distribuidor / Industrial / Gobierno']
  rfc_tax_id   varchar(40)
  activo_flag  bit          [not null, default: 1]
}

Table dim_tiempo {
  tiempo_id    int         [pk, note: 'YYYYMMDD']
  fecha        date        [not null]
  anio         smallint    [not null]
  trimestre    tinyint     [not null]
  mes          tinyint     [not null]
  semana       tinyint     [not null]
  dia_semana   varchar(10) [not null]
  es_fin_semana bit        [not null, default: 0]
}

// ---- FACTS ----

Table fact_produccion {
  produccion_id       int           [pk, increment]
  tiempo_id           int           [not null, ref: > dim_tiempo.tiempo_id]
  pozo_id             int           [not null, ref: > dim_pozo.pozo_id]
  producto_id         int           [not null, ref: > dim_producto.producto_id]
  instalacion_id      int           [not null, ref: > dim_instalacion.instalacion_id]
  volumen_bruto_bpd   decimal(12,3) [not null, note: 'Barriles/dia brutos']
  volumen_neto_bpd    decimal(12,3) [not null, note: 'Barriles/dia netos']
  gas_asociado_mscfd  decimal(12,3) [note: 'Miles pies cubicos/dia']
  agua_bpd            decimal(12,3)
  bsw_pct             decimal(5,2)  [note: 'Basic Sediment & Water %']
  gor_scf_bbl         decimal(10,2) [note: 'Gas-Oil Ratio']
  presion_cabezal_psi decimal(8,2)
  horas_operacion     decimal(5,2)

  indexes {
    (tiempo_id, pozo_id, producto_id) [unique]
  }
}

Table fact_reservas {
  reserva_id                  int           [pk, increment]
  tiempo_id                   int           [not null, ref: > dim_tiempo.tiempo_id, note: 'Fecha de corte 31-dic']
  campo_id                    int           [not null, ref: > dim_campo.campo_id]
  producto_id                 int           [not null, ref: > dim_producto.producto_id]
  reservas_1p_mmbbl           decimal(15,3) [note: 'Probadas']
  reservas_2p_mmbbl           decimal(15,3) [note: 'Probadas + Probables']
  reservas_3p_mmbbl           decimal(15,3) [note: '+ Posibles']
  recursos_contingentes_mmbbl decimal(15,3)
  factor_recuperacion_pct     decimal(5,2)

  indexes {
    (tiempo_id, campo_id, producto_id) [unique]
  }
}

Table fact_venta {
  venta_id          int           [pk, increment]
  tiempo_id         int           [not null, ref: > dim_tiempo.tiempo_id]
  cliente_id        int           [not null, ref: > dim_cliente.cliente_id]
  producto_id       int           [not null, ref: > dim_producto.producto_id]
  instalacion_id    int           [not null, ref: > dim_instalacion.instalacion_id]
  campo_id          int           [not null, ref: > dim_campo.campo_id]
  volumen_bbl       decimal(15,3) [not null]
  precio_usd_bbl    decimal(10,4) [not null]
  importe_usd       decimal(18,2) [not null]
  precio_referencia varchar(20)   [note: 'Brent / WTI / Maya / Argus']
  descuento_usd_bbl decimal(8,4)
  incoterm          varchar(10)   [note: 'FOB / CIF / DES']
}

Table fact_opex {
  opex_id         int           [pk, increment]
  tiempo_id       int           [not null, ref: > dim_tiempo.tiempo_id]
  campo_id        int           [not null, ref: > dim_campo.campo_id]
  instalacion_id  int           [not null, ref: > dim_instalacion.instalacion_id]
  categoria_costo varchar(40)   [not null, note: 'Mantenimiento / Personal / Energia / Quimica / Logistica']
  importe_usd     decimal(18,2) [not null]
  costo_boe_usd   decimal(8,4)  [note: 'USD por barril equivalente']
}

Table fact_mantenimiento {
  mant_id                  int           [pk, increment]
  tiempo_id                int           [not null, ref: > dim_tiempo.tiempo_id]
  pozo_id                  int           [ref: > dim_pozo.pozo_id]
  instalacion_id           int           [ref: > dim_instalacion.instalacion_id]
  tipo_trabajo             varchar(40)   [not null, note: 'Workover / WellService / Overhaul / Inspeccion']
  duracion_dias            smallint      [not null]
  costo_usd                decimal(18,2) [not null]
  produccion_diferida_bbl  decimal(15,3)
  resultado                varchar(20)   [not null, note: 'Exitoso / Parcial / Fallido']
}
